# cim-keys

./: .envrc  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DESIGN.md  CATEGORICAL_FRP_SEMANTICS.md  CIM-DEVELOPMENT-GUIDELINES.md  CIM_KEYS_ARCHITECTURE.md  CLAN-NSC-GAP-ANALYSIS.md  CLAUDE.md  CODE_CLEANUP_SUMMARY.md  CONTINUATION_SESSION_SUMMARY.md  CQRS_GRAPH_DESIGN.md  CRYPTO_INTEGRATION_PROGRESS.md  Cargo.toml  DDD_HEXAGONAL_ARCHITECTURE_ASSESSMENT.md  DETAILED_IMPLEMENTATION_PLAN.md  FEATURES_COMPLETE_README.md  FIREFLY_DEBUG_SUMMARY.md  FIREFLY_SWARM_MODELS.md  FONTS.md  FRP_COMPLIANCE_UPDATE.md  GRAPH_BASED_NODE_CREATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_GRAPH_DESIGN.md  MIGRATION_GUIDE.md  MVI_ARCHITECTURE_DIAGRAM.md  MVI_IMPLEMENTATION_GUIDE.md  MVI_IMPLEMENTATION_SUMMARY.md  Makefile  N_ARY_FRP_COMPLETION_SUMMARY.md  N_ARY_FRP_COMPLIANCE_ANALYSIS.md  N_ARY_FRP_PROGRESS.md  PASSPHRASE_TO_PKI_PROGRESS.md  PHASE1_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE_1_MILESTONE.md  PKI_HIERARCHY_DESIGN.md  (+22 more)
.claude/: AGENT_UPDATE_PLAN.md  CLAUDE.md  INDEX.md  commands.md  instructions.md
.claude/agents/: act-expert.md  bdd-expert.md  cim-domain-expert.md  cim-expert.md  cim-tea-ecs-expert.md  conceptual-spaces-expert.md  ddd-expert.md  domain-expert.md  domain-ontologist-researcher.md  egui-ui-expert.md  elm-architecture-expert.md  event-storming-expert.md  fp-expert.md  frp-expert.md  git-expert.md  graph-expert.md  iced-ui-expert.md  language-expert.md  location-expert.md  nats-expert.md  network-expert.md  nix-expert.md  org-expert.md  people-expert.md  qa-expert.md  sage.md  sdlc-distributed-expert.md  subject-expert.md  tdd-expert.md
.claude/tests/: agent-validation-tests.md
cim-keys-output/: manifest.json
creds/ADMIN/: admin.creds
creds/MONITORING/: prometheus.creds
creds/SYS/: sys-admin.creds
doc/: DOMAIN-GLOSSARY.md  FUNCTIONALITY_AUDIT.md  GRAPH_REFACTORING_PLAN.md
doc/architecture/: context-map.md
doc/evaluations/: 01-frp-expert-evaluation.md  02-act-expert-evaluation.md  03-ddd-expert-evaluation.md  04-domain-expert-evaluation.md  05-cim-expert-evaluation.md  06-graph-expert-evaluation.md  07-nats-expert-evaluation.md  08-subject-expert-evaluation.md  09-fp-expert-evaluation.md  FINAL_COMPLIANCE_REPORT.md  SPRINT_PLAN.md
docs/: CIM_INTEGRATION_ASSESSMENT.md  CIM_REGISTRY_INTEGRATION.md  CLAIMS_POLICY_ONTOLOGY.md  CLI_REFERENCE.md  EVENT_PUBLISHING_USAGE.md  GRAPH_FIRST_UI_ARCHITECTURE.md  GRAPH_INTERACTION_PATTERNS.md  GUI_ENHANCEMENTS_ARCHITECTURE.md  NATS_HIERARCHY_GUIDE.md  NATS_STREAMING_ARCHITECTURE.md  NODETYPE_MIGRATION_SPRINT10_RETROSPECTIVE.md  NODETYPE_MIGRATION_SPRINT13_RETROSPECTIVE.md  NODETYPE_MIGRATION_SPRINT15_RETROSPECTIVE.md  NODETYPE_MIGRATION_SPRINT17_RETROSPECTIVE.md  NODETYPE_MIGRATION_SPRINT7_RETROSPECTIVE.md  NODETYPE_MIGRATION_SPRINT8_RETROSPECTIVE.md  N_ARY_FRP_GETTING_STARTED.md  STATE_MACHINE_PHASE1_RETROSPECTIVE.md  STATE_MACHINE_PHASE5_RETROSPECTIVE.md  STATE_MACHINE_PHASE9_RETROSPECTIVE.md
docs/archive/: DOCUMENTATION_REORGANIZATION_PLAN.md  README.md
docs/technical/: README.md
docs/user/: README.md
examples/: animation_time_continuous.rs  basic_usage.rs  bootstrap-config.json  causality_integration.rs  cim_leaf_integration.rs  cim_leaf_integration.rs.disabled  clan-bootstrap.json  feedback_aggregate_integration.rs  graph_ui_prototype.rs  hexagonal_demo.rs  mvi_demo.rs  mvi_routing_pattern.rs  nats_integration.rs  nats_tls_setup.rs  nats_tls_setup.rs.disabled  routing_dsl_integration.rs  signal_integration.rs  test_rcgen_api.rs.disabled  test_root_ca.rs.disabled  test_yubikey.rs  yubikey_demo.rs
examples/graph-data/: README.md  nats-infrastructure.json  organization-example.json  pki-hierarchy.json  simple-graph.json
nixos/: fix-cargo-lock.patch
nsc/: nsc.json
output/: events.json
retrospectives/: sprint_1.md  sprint_11.md  sprint_12.md  sprint_13.md  sprint_14.md  sprint_15.md  sprint_16.md  sprint_20.md  sprint_21.md  sprint_22.md  sprint_23.md  sprint_26.md  sprint_27.md  sprint_28.md  sprint_29.md  sprint_30.md  sprint_31.md  sprint_32.md  sprint_33.md  sprint_34.md  sprint_35.md  sprint_36.md  sprint_37.md  sprint_38.md  sprint_39.md  sprint_4.md  sprint_40.md  sprint_41.md  sprint_42.md  sprint_43.md  sprint_44.md  sprint_45.md  sprint_46.md  sprint_48.md  sprint_49.md  sprint_5.md  sprint_50.md  sprint_51.md  sprint_52.md  sprint_53.md  (+38 more)
secrets/: cowboyai.json  cowboyai.json.backup  domain-bootstrap.json  policy-bootstrap.json  secrets.json  secrets.json.backup
src/: aggregate.rs  aggregate.rs.old  causation.rs  certificate_service.rs  clan_bootstrap.rs  commands.rs  commands.rs.bak  config.rs  domain.rs  domain_stubs.rs  error.rs  event_store.rs  events.rs  events_legacy.rs  fold.rs  graph_projection.rs  gui.rs  icons.rs  ipld_support.rs  lib.rs  lifting.rs  nats_identity_types.rs  policy_loader.rs  policy_types.rs  projection.rs  projections.rs  secrets_loader.rs  state_machines.rs  traits.rs  types.rs
src/acl/: error.rs  (+3 more)
tests/: bdd_tests.rs  certificate_chain_property_tests.rs  certificate_events.rs  certificate_state_machine.rs  clan_bootstrap_integration.rs  complete_bootstrap_workflow.rs  composed_state_machine_tests.rs  context_boundaries.rs  cqrs_command_flows.rs  domain_bootstrap.rs  end_to_end_workflows.rs  event_flow_tests.rs  event_hardening_tests.rs  event_sourcing_roundtrip.rs  functor_laws_tests.rs  graph_gui_integration.rs  graph_persistence.rs  graph_view_integration.rs.disabled  gui_backend_integration.rs  jetstream_integration.rs  key_events.rs  key_state_machine.rs  location_events.rs  location_state_machine.rs  manifest_events.rs  manifest_state_machine.rs  mvi_tests.rs  nats_account_events.rs  nats_account_state_machine.rs  nats_integration_tests.rs  nats_operator_events.rs  nats_operator_state_machine.rs  nats_user_events.rs  nats_user_state_machine.rs  organization_events.rs  organization_state_machine.rs  person_events.rs  person_state_machine.rs  pki_infrastructure_tests.rs  policy_state_machine.rs  (+11 more)
(+424 files in other folders)
