[package]
name = "cim-keys"
version = "0.7.8"
edition = "2021"
authors = ["The Cowboy AI Team"]
description = "Cryptographic key management and PKI support for CIM, including YubiKey integration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thecowboyai/cim-keys"
keywords = ["yubikey", "pki", "gpg", "ssh", "x509"]
categories = ["cryptography", "authentication"]

[dependencies]
# CIM Foundation - Event-Driven FRP Architecture
cim-domain = { git = "https://github.com/TheCowboyAI/cim-domain.git", tag = "v0.8.1" }
cim-domain-person = { git = "https://github.com/TheCowboyAI/cim-domain-person.git", tag = "v0.8.1", optional = true }
cim-domain-organization = { git = "https://github.com/TheCowboyAI/cim-domain-organization.git", tag = "v0.8.1", optional = true }
cim-domain-location = { git = "https://github.com/TheCowboyAI/cim-domain-location.git", tag = "v0.8.1", optional = true }
cim-domain-policy = { git = "https://github.com/TheCowboyAI/cim-domain-policy.git", tag = "v0.8.1", optional = true }

# Core dependencies
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"

# Cryptography
ring = "0.17"  # For general crypto operations
rsa = "0.9"    # RSA support
ed25519-dalek = "2.1"  # Ed25519 support
x509-parser = "0.16"   # X.509 certificate parsing
rcgen = "0.14"  # X.509 certificate generation
p256 = { version = "0.13", features = ["ecdsa"] }  # ECDSA support
nkeys = "0.4"  # NATS Ed25519 nkey generation and JWT signing

# YubiKey support
yubikey = { version = "0.8", features = ["untested"], optional = true }
pcsc = { version = "2.8", optional = true }  # PC/SC smart card interface

# GPG support
sequoia-openpgp = { version = "1.22", optional = true }  # Modern OpenPGP implementation
gpgme = { version = "0.11", optional = true }  # GPG Made Easy bindings

# SSH support
ssh-key = { version = "0.6", features = ["ed25519", "rsa", "ecdsa"] }
ssh-encoding = "0.2"

# TLS/PKI
rustls = "0.23"
rustls-pemfile = "2.2"
webpki = "0.22"

# Storage and encoding
base64 = "0.22"
hex = "0.4"
pem = "3.0"
der = "0.7"

# Hashing and KDF
sha2 = "0.10"
argon2 = "0.5"  # Argon2id for passphrase derivation
hkdf = "0.12"   # HMAC-based Key Derivation Function

# Time handling (required by rcgen)
time = { version = "0.3", features = ["formatting", "macros"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# GUI with Iced 0.13+ (native and WASM with async)
iced = { version = "0.13", features = ["tokio", "canvas", "wgpu", "image"], optional = true }
iced_widget = { version = "0.13", optional = true }
iced_futures = { version = "0.13", optional = true }
bytemuck = { version = "1.14", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.14"  # Native file dialogs

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["File", "FileReader", "FileList", "Blob", "Document", "HtmlElement", "Window"] }
gloo-file = "0.3"  # File handling in browser
console_error_panic_hook = "0.1"
wasm-logger = "0.2"

# Error handling and utilities
zeroize = { version = "1.8", features = ["derive"] }  # Secure memory clearing
secrecy = "0.10"  # Secret management

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
mockall = "0.13"

[features]
default = ["gui", "policy"]
gui = ["iced", "iced_widget", "iced_futures", "bytemuck"]
policy = ["cim-domain-policy", "cim-domain-organization", "cim-domain-person", "cim-domain-location"]
yubikey-support = ["yubikey", "pcsc"]
gpg-support = ["sequoia-openpgp", "gpgme"]
test-utils = []

[[example]]
name = "basic_usage"

[[example]]
name = "cim_leaf_integration"

[[example]]
name = "nats_tls_setup"

[[example]]
name = "test_root_ca"

[[bin]]
name = "cim-keys"
path = "src/bin/cim-keys.rs"

[[bin]]
name = "cim-keys-gui"
path = "src/bin/cim-keys-gui.rs"
required-features = ["gui"]
